--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
 
-  <img src="C:\Users\Gerych\Desktop\portfolio-step-1\img\user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+  <img src="github.com/Gerych-script/123/blob/main/img/user.jpg">
   
 </figure>
 
